Add some minor configurations fixes

--- a/nsd_attack/nsd.conf
+++ b/nsd_attack/nsd.conf
@@ -105,7 +105,7 @@ server:
 	# chroot: "/etc/nsd"
 
 	# The directory for zonefile: files.  The daemon chdirs here.
-	zonesdir: "/home/shaniba/DNSResearch/nsd_attack"
+	zonesdir: "/env/nsd_attack"
 
 	# the list of dynamically added zones.
 	# zonelistfile: "/var/db/nsd/zone.list"
